src/test/deca/syntax/valid/SO/lex/symb_speciaux.deca
// Description:
//    Programme pour vérifier l'appartenance au lexique.
//
// Resultats:
//    
//
// Historique:
//    cree le 07/01/2022

_
<
>
=
+
-
*
/
%
.
,
(
{
}
)
!
;
==
!=
>=
<=
&&
||