src/test/deca/syntax/invalid/HW/openBraceMissing.deca
// Description:
//    Programme minimaliste oubliant l'acollade ouvrante
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 06/01/2022

        print("Hello");
}